--- a/app/src/main/res/layout/text_with_overflow.xml
+++ b/app/src/main/res/layout/text_with_overflow.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@android:id/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/overflow"
