--- a/app/src/main/res/layout/row_user_square.xml
+++ b/app/src/main/res/layout/row_user_square.xml
@@ -9,7 +9,8 @@
         android:id="@+id/avatarAuthorImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:transitionName="avatar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
