--- a/app/src/main/res/layout/activity_content_editor.xml
+++ b/app/src/main/res/layout/activity_content_editor.xml
@@ -7,7 +7,8 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+        layout="@layout/toolbar"
+        android:transitionName="editor"/>
 
     <EditText
         android:id="@+id/edit"
