Add minidrawer to RepoDetail
@MikePenz check new_repo_detail branch

--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -5,6 +5,6 @@
         <item name="android:windowContentTransitions">true</item>
     </style>
 
-    <style name="AppTheme.Search" parent="Base.AppTheme" />
+    <style name="AppTheme.Search" parent="Base.AppTheme.Search" />
 
 </resources>
