Add minidrawer to RepoDetail
@MikePenz check new_repo_detail branch

--- a/app/src/main/res/layout/activity_repo_detail.xml
+++ b/app/src/main/res/layout/activity_repo_detail.xml
@@ -44,7 +44,8 @@
             android:id="@+id/miniDrawerLayout"
             android:layout_width="72dp"
             android:layout_height="match_parent"
-            android:layout_gravity="start" />
+            android:layout_gravity="start"
+            android:background="@color/material_drawer_dark_selected"/>
     </android.support.v4.widget.DrawerLayout>
 
 </LinearLayout>
