Split enterprise app

--- a/app/src/main/res/xml/notifications_syncadapter.xml
+++ b/app/src/main/res/xml/notifications_syncadapter.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contentAuthority="@string/account_type"
+    android:contentAuthority="${applicationId}"
     android:accountType="@string/account_type"
     android:userVisible="true"
     android:supportsUploading="false"
