--- a/app/src/enterpriseRelease/res/values/colors.xml
+++ b/app/src/enterpriseRelease/res/values/colors.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#27b045</color>
-    <color name="primary_dark">#1fa235</color>
-    <color name="primary_alpha">#FF3cb027</color>
-    <color name="primary_dark_alpha">#FF1fa235</color>
+    <color name="primary">@color/md_blue_grey_500</color>
+    <color name="primary_dark">@color/md_blue_grey_700</color>
+    <color name="primary_alpha">@color/md_blue_grey_500</color>
+    <color name="primary_dark_alpha">@color/md_blue_grey_700</color>
 
-    <color name="primary_light">#bee7c2</color>
-    <color name="accent">#c7b700</color>
-    <color name="accent_dark">#6e5400</color>
-    <color name="primary_text">#212121</color>
+    <color name="primary_light">@color/md_blue_grey_300</color>
+    <color name="accent">@color/md_teal_A400</color>
+    <color name="accent_dark">@color/md_teal_A700</color>
+    <color name="primary_text">@color/md_grey_900</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#B6B6B6</color>
     <color name="divider">#B6B6B6</color>
 
-    <color name="commit_stats_bg">#96b2ff8c</color>
-    <color name="commit_stats_stroke">#a865e75c</color>
+    <color name="commit_stats_bg">@color/md_blue_grey_300</color>
+    <color name="commit_stats_stroke">@color/md_blue_grey_500</color>
 
 </resources>
