--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -7,7 +7,7 @@
 
     <style name="AppTheme.Search" parent="Base.AppTheme.Search" />
 
-    <style name="AppTheme.Login" parent="Base.AppTheme.Login">
+    <style name="AppTheme.Welcome" parent="Base.AppTheme.Welcome">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
