--- a/app/src/enterpriseRelease/res/values/colors.xml
+++ b/app/src/enterpriseRelease/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="primary_light">@color/md_blue_grey_300</color>
     <color name="accent">@color/md_teal_A400</color>
+    <color name="accent_welcome">#C5D9CE</color>
     <color name="accent_dark">@color/md_teal_A700</color>
     <color name="primary_text">@color/md_grey_900</color>
     <color name="secondary_text">#727272</color>
