--- a/app/src/github/res/layout/activity_welcome.xml
+++ b/app/src/github/res/layout/activity_welcome.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="?attr/colorPrimaryDark"
+    android:elevation="@dimen/gapMedium"
     tools:context="com.alorma.github.ui.activity.WelcomeActivity">
 
     <ImageView
@@ -11,7 +12,7 @@
         android:layout_height="200dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/ic_launcher_web" />
 
     <TextView
@@ -24,10 +25,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/imageView2"
-        android:layout_margin="@dimen/gapXLarge"
+        android:layout_marginTop="@dimen/gapXLarge"
         android:gravity="center"
         android:text="@string/app_name"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/white"
         android:textSize="30sp" />
 
@@ -36,9 +36,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/appName"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/gapLarge"
         android:layout_marginLeft="@dimen/gapXLarge"
         android:layout_marginRight="@dimen/gapXLarge"
-        android:layout_marginTop="@dimen/gapXLarge"
+        android:layout_marginTop="@dimen/gapXXLarge"
         android:orientation="vertical">
 
         <Button
@@ -47,12 +48,5 @@
             android:layout_height="wrap_content"
             android:text="@string/welcome_button_github" />
 
-        <Button
-            android:id="@+id/buttonEnterprise"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gapMedium"
-            android:text="@string/welcome_button_enterprise" />
     </LinearLayout>
-
 </RelativeLayout>
