--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -127,14 +127,13 @@
 
     </style>
 
+    <style name="Toolbar.Popup.AppCompat" parent="Theme.AppCompat.Light" />
 
-    <style name="Toolbar.Popup.AppCompat" parent="Theme.AppCompat.Light">
-    </style>
-
-    <style name="AppTheme.Welcome" parent="Base.AppTheme.Welcome"/>
+    <style name="AppTheme.Welcome" parent="Base.AppTheme.Welcome" />
 
     <style name="Base.AppTheme.Welcome">
-        <item name="android:background">?attr/colorPrimaryDark</item>
-        <item name="colorButtonNormal">@color/accent</item>
+        <item name="colorAccent">@color/accent_welcome</item>
+        <item name="android:windowBackground">?attr/colorPrimary</item>
+        <item name="colorButtonNormal">?attr/colorAccent</item>
     </style>
 </resources>
