--- a/app/src/github/res/layout/activity_welcome.xml
+++ b/app/src/github/res/layout/activity_welcome.xml
@@ -4,16 +4,18 @@
     android:layout_height="match_parent"
     android:background="?attr/colorPrimaryDark"
     android:elevation="@dimen/gapMedium"
-    tools:context="com.alorma.github.ui.activity.WelcomeActivity">
+    tools:context="com.alorma.github.ui.activity.WelcomeActivity"
+    >
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="90dp"
-        android:src="@drawable/ic_launcher_web" />
+        android:src="@drawable/ic_launcher_web"
+        />
 
     <TextView
         android:id="@+id/appName"
@@ -24,14 +26,15 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageView2"
+        android:layout_below="@+id/imageView"
         android:layout_marginTop="@dimen/gapXLarge"
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        />
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/appName"
@@ -40,13 +43,24 @@
         android:layout_marginLeft="@dimen/gapXLarge"
         android:layout_marginRight="@dimen/gapXLarge"
         android:layout_marginTop="@dimen/gapXXLarge"
-        android:orientation="vertical">
+        >
 
         <Button
             android:id="@+id/buttonGithub"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/welcome_button_github" />
-
-    </LinearLayout>
+            android:visibility="invisible"
+            tools:visibility="visible"
+            android:alpha="0"
+            tools:alpha="1"
+            android:text="@string/welcome_button_github"
+            />
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_gravity="center"
+            android:visibility="invisible"
+            />
+    </FrameLayout>
 </RelativeLayout>
