--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.alorma.github.ui.activity.GithubLoginActivity"
+        tools:context=".ui.activity.GithubLoginFragment"
         android:background="@color/white">
 
         <ImageView
