--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        tools:context=".ui.activity.GithubLoginFragment">
+        tools:context=".account.GithubLoginFragment">
 
         <ImageView
             android:id="@+id/imageView"
