--- a/app/src/enterprise/res/layout/activity_welcome.xml
+++ b/app/src/enterprise/res/layout/activity_welcome.xml
@@ -3,9 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimaryDark"
-    android:elevation="@dimen/gapMedium"
+    android:fitsSystemWindows="true"
     tools:context="com.alorma.github.ui.activity.WelcomeActivity"
     >
+    <android.support.v7.widget.SwitchCompat
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:text="@string/import_gitskarios_accounts"
+        android:id="@+id/importAccountsSwitch"
+        android:paddingLeft="@dimen/gapLarge"
+        android:paddingRight="@dimen/gapLarge"
+        android:layout_marginLeft="@dimen/gapSmall"
+        android:layout_marginRight="@dimen/gapSmall"
+        android:layout_marginBottom="@dimen/gapMedium"
+        android:layout_marginTop="@dimen/gapXLarge"
+        android:textColor="@color/white"
+        />
 
     <ImageView
         android:id="@+id/imageView"
@@ -53,14 +66,32 @@
         android:layout_marginBottom="@dimen/gapLarge"
         android:layout_marginLeft="@dimen/gapXLarge"
         android:layout_marginRight="@dimen/gapXLarge"
-        android:layout_marginTop="@dimen/gapXXLarge"
+        android:layout_marginTop="@dimen/gapXLarge"
         >
 
+        <Button
+            android:id="@+id/buttonOpen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            tools:visibility="gone"
+            android:alpha="0"
+            tools:alpha="1"
+            android:text="@string/open_app"
+            />
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_gravity="center"
+            android:visibility="invisible"
+            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
+
             <Button
                 android:id="@+id/buttonGithub"
                 android:layout_width="match_parent"
@@ -83,22 +114,5 @@
                 android:text="@string/welcome_button_enterprise"
                 />
         </LinearLayout>
-        <Button
-            android:id="@+id/buttonOpen"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            tools:visibility="gone"
-            android:alpha="0"
-            tools:alpha="1"
-            android:text="@string/open_app"
-            />
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
-            android:layout_gravity="center"
-            android:visibility="invisible"
-            />
     </FrameLayout>
 </RelativeLayout>
