--- a/app/src/main/res/layout/activity_repo_detail.xml
+++ b/app/src/main/res/layout/activity_repo_detail.xml
@@ -35,7 +35,7 @@
             android:layout_height="?actionBarSize" />
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
+    <android.support.v4.view.ViewPager
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
