--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -26,7 +26,8 @@
                 android:background="@null"
                 android:hint="@string/search"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:imeActionLabel="@string/search"/>
 
         </android.support.v7.widget.Toolbar>
 
