--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -51,4 +51,6 @@
     <color name="github_status_green">#13b413</color>
     <color name="github_status_yellow">#e9c645</color>
     <color name="github_status_red">#b5ff0000</color>
+    <color name="crumb_active">#fff</color>
+    <color name="crumb_inactive">#73ffffff</color>
 </resources>
