--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -85,4 +85,10 @@
     <dimen name="material_drawer_item_secondary_description">12sp</dimen>
     <dimen name="tabsIcon">14dp</dimen>
 
+    <dimen name="breadcrumb_height">42dp</dimen>
+    <dimen name="breadcrumb_padding_side">4dp</dimen>
+    <dimen name="breadcrumb_fontsize">14sp</dimen>
+    <dimen name="breadcrumb_arrow_size">18dp</dimen>
+    <dimen name="breadcrumb_arrow_margin">8dp</dimen>
+    <dimen name="breadcrumb_layout_margin">68dp</dimen>
 </resources>
